--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@middy/http-json-body-parser": "^2.5.3"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.172.0",
+    "@aws-sdk/lib-dynamodb": "^3.172.0",
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
